[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/Quests/QuestLog.gd" id="1_log"]

[node name="QuestLog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_log")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "บันทึกภารกิจ (Quest Log)"
horizontal_alignment = 1

[node name="Scroll" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Panel/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="ActiveHeader" type="Label" parent="Panel/VBox/Scroll/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 24
text = "ภารกิจที่กำลังทำ"

[node name="ActiveQuests" type="VBoxContainer" parent="Panel/VBox/Scroll/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="Panel/VBox/Scroll/VBox"]
layout_mode = 2

[node name="CompletedHeader" type="Label" parent="Panel/VBox/Scroll/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0.498039, 1)
theme_override_font_sizes/font_size = 24
text = "ภารกิจที่สำเร็จแล้ว"

[node name="CompletedQuests" type="VBoxContainer" parent="Panel/VBox/Scroll/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CloseBtn" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "ปิดหน้าต่าง"

[connection signal="pressed" from="Panel/VBox/CloseBtn" to="." method="_on_close_pressed"]
